Fix for Trell #675 https://trello.com/c/l5QD5Nve Also fix for perfect-scrollbar in project picker

--- a/app/NovaWeb/src/styles/partials/_modal.scss
+++ b/app/NovaWeb/src/styles/partials/_modal.scss
@@ -146,14 +146,16 @@ $modal-open-project-height: 450px;
         white-space: nowrap;
       }
 
-      .project-description {
+      .project-description-wrapper {
         background: $gray-lightest;
         border-radius: $border-radius-amount;
         margin-top: 10px;
         max-height: 137px;
         min-height: 36px;
-        overflow: auto;
-        padding: 8px 15px;
+
+        .project-description {
+          padding: 8px 15px;
+        }
       }
     }
 
